Increase navbar logo size to 100px, reduce gap to 5px, fix favicon links

--- a/school_management/static/css/style.css
+++ b/school_management/static/css/style.css
@@ -209,7 +209,7 @@ footer {
 }
 
 .navbar-logo {
-    height: 80px;
+    height: 100px;
     object-fit: contain;
 }
 
@@ -235,6 +235,6 @@ footer {
     }
     
     .navbar-logo {
-        height: 60px;
+        height: 70px;
     }
 }
